test: restore consumer build from ng cli
Consistent selectors in `sample-custom` and `@sample/material`.

--- a/integration/consumers/ng-cli/src/app/app.component.html
+++ b/integration/consumers/ng-cli/src/app/app.component.html
@@ -3,6 +3,13 @@
 </h1>
 
 
-<sample-foo></sample-foo>
+<h4>Components from <code>sample-custom</code> library</h4>
+<custom-baz></custom-baz>
+<custom-foo></custom-foo>
+<custom-foo-bar></custom-foo-bar>
+<custom-less-baz></custom-less-baz>
+
+
+<h4>Components from <code>@sample/material</code> library</h4>
 <foo-component></foo-component>
 <bar-component></bar-component>
