feat: support intra-package dependencies (re. entry points, experimental) (#685)

--- a/integration/consumers/ng-cli/src/app/app.component.html
+++ b/integration/consumers/ng-cli/src/app/app.component.html
@@ -13,3 +13,7 @@
 <h4>Components from <code>@sample/material</code> library</h4>
 <foo-component></foo-component>
 <bar-component></bar-component>
+
+
+<h4>Including dependencies from <code>@sample/secondary</code> library</h4>
+<app-secondary></app-secondary>
