feat: add support for incremental builds (#884)
On command line, you can enable the watch by providing the `-w` or `--watch` options. For the API, you can use the `withOptions` method example.

CLI
```
ng-packagr --project ng-packagr.js --watch
```

API
```
ngPackage
  .ngPackagr()
  .forProject('ng-package.js')
  .withOptions({watch: true})
  .build()
```

This requires `enableResourceInlining` to be enabled and also this is a sort of MVP. There are more optimization that need to be done.

Closes #828 
Closes #743 
Closes #635

--- a/integration/samples/scss-paths/baz/baz.component.scss
+++ b/integration/samples/scss-paths/baz/baz.component.scss
@@ -1,7 +1,12 @@
+@import 'baz.theme';
 @import 'theme';
 @import '~node-sass/test/fixtures/include-files/file-not-processed-by-loader';
 
+.foo {
+  @include local-test-mixin();
+}
+
 .baz {
-    color: $variable-defined-by-file-not-processed-by-loader;
-    background-color: $background-color-bright;
+  color: $variable-defined-by-file-not-processed-by-loader;
+  background-color: $background-color-bright;
 }
