fix: browserlist configuration is not being picked up (#994)
`filePath` is not a valid option. The correct one is `path`
https://www.npmjs.com/package/browserslist#js-api

Closes: angular/angular-cli#11480

--- a/integration/samples/scss-paths/baz/baz.component.scss
+++ b/integration/samples/scss-paths/baz/baz.component.scss
@@ -9,4 +9,5 @@
 .baz {
   color: $variable-defined-by-file-not-processed-by-loader;
   background-color: $background-color-bright;
+  display: flex;
 }
