test: update scss integration tests to work without node-sass

--- a/integration/samples/material/baz/baz.component.scss
+++ b/integration/samples/material/baz/baz.component.scss
@@ -1,6 +1,7 @@
-@import '~@angular/cdk/overlay';
+@import '~@angular/material/theming';
+@include mat-core();
 
 .baz {
-  color: $cdk-overlay-dark-backdrop-background;
+  color: red;
   content: '\2014 \00A0';
 }
