--- a/integration/samples/scss-paths/baz/baz.component.scss
+++ b/integration/samples/scss-paths/baz/baz.component.scss
@@ -1,8 +1,8 @@
 @import 'baz.theme';
 @import 'baz.theme2';
 @import 'theme';
-@import '~@angular/cdk/overlay';
-
+@import '~@angular/material/theming';
+@include mat-core();
 .foo {
   @include local-test-mixin();
 }
@@ -12,7 +12,6 @@
 }
 
 .baz {
-  color: $cdk-overlay-dark-backdrop-background;
   background-color: $background-color-bright;
   display: flex;
 }
