feat: support inline javascript in less (#1300)
Fixes #1298

--- a/integration/samples/scss-paths/baz/baz component.less
+++ b/integration/samples/scss-paths/baz/baz component.less
@@ -6,3 +6,9 @@
     color: @foreground-color-bright;
   }
 }
+
+.myFunction() {
+  @functions: ~`(function () {return 'hi!' ;}) () `;
+}
+
+.myFunction();
