test: update angular material tests to use sass modules

--- a/integration/samples/secondary/primary/baz/baz.component.scss
+++ b/integration/samples/secondary/primary/baz/baz.component.scss
@@ -1,5 +1,6 @@
-@import '~@angular/material/theming';
-@include mat-core();
+@use '~@angular/material' as mat;
+@include mat.core();
+
 .baz {
   color: #fff;
 }
