--- a/integration/samples/package-json/baz/baz.component.scss
+++ b/integration/samples/package-json/baz/baz.component.scss
@@ -1,5 +1,5 @@
-@import '~@angular/material/theming';
-@include mat-core();
+@use '~@angular/material' as mat;
+@include mat.core();
 
 .baz {
   color: #fff;
