--- a/integration/samples/scss-paths/baz/baz.component.sass
+++ b/integration/samples/scss-paths/baz/baz.component.sass
@@ -1,8 +1,11 @@
+@use '~@angular/material' as mat
+
 @import 'baz.theme'
 @import 'baz.theme2'
 @import 'theme'
-@import '~@angular/material/theming'
-@include mat-core()
+
+@include mat.core()
+
 .foo2
   @include local-test-mixin2()
 
