--- a/integration/samples/scss-paths/baz/baz.component.scss
+++ b/integration/samples/scss-paths/baz/baz.component.scss
@@ -1,8 +1,10 @@
+@use '~@angular/material' as mat;
 @import 'baz.theme';
 @import 'baz.theme2';
 @import 'theme';
-@import '~@angular/material/theming';
-@include mat-core();
+
+@include mat.core();
+
 .foo {
   @include local-test-mixin();
 }
